--- a/bio.html
+++ b/bio.html
@@ -27,7 +27,7 @@
           <li><a class="" href="filmography.html"><span>Filmography</span></a></li>
           <li><a class="" href="print.html"><span>Print</span></a></li>
           <li><a class="" href="book.html"><span>Book</span></a></li>
-          <li><a class="" href="gallery.html"><span>Gallery</span></a></li>
+          <li><a class="" href="database.html"><span>Database</span></a></li>
         </ul>
       </nav>
     </section>
